# Coding-Assistants

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  main.py  package-lock.json  pyproject.toml
.agent/prompts/: architecture_analysis.md  cli_generation.md  debug.md  documentation_update.md  feature_implementation.md  master_context.md  refactory_safety.md
.agent/rules/: ai_ml.md  android_kotlin.md  code_refactor.md  code_review.md  error_debug.md  gui_dev.md  reasoning_planning.md  rust.md  test_writing.md  typescript_react.md
.agent/workflows/: ai_ml.md  android_kotlin.md  code_refactor.md  data_eng.md  deployment_ops.md  error_debug.md  gui_dev.md  reasoning_planning.md  rust.md  test_writing.md  typescript_react.md
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/remotelauncher/: MainActivity.kt  MainViewModel.kt  Models.kt  TcpClient.kt
android/app/src/main/kotlin/com/example/remotelauncher/network/: TcpClient.kt
android/app/src/main/kotlin/com/example/remotelauncher/ui/: ConnectionScreen.kt  ModelSelectionScreen.kt  TaskExecutionScreen.kt
android/app/src/main/kotlin/com/example/remotelauncher/viewmodel/: MainViewModel.kt
android/app/src/main/res/layout/: activity_main.xml
env/: requirements.txt  vars.env
gui/src/: configs_window.py
gui/test/: test_configs_window.py  test_definitions.py  test_suite.py
logic/src/: environment.py
logic/src/config/: arg_parser.py
logic/src/tools/: file_system.py
logic/test/: conftest.py  test_definitions.py  test_suite.py  test_tools.py
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: agents.rs  file_tools.rs  lib.rs  llm_client.rs  tcp_server.rs
