[project]
name = "coding-assistants"
version = "0.1.0"
description = "An environment where multiple LLMs can talk among each other to help program a given codebase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.0.0",
    "pyautogen>=0.2.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]
