[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "coding-assistants"
version = "0.1.0"
description = "An environment where multiple LLMs can talk among each other to help program a given codebase"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "autogen>=0.10.2",
    "google-genai>=1.55.0",
    "openai>=1.0.0",
    "pyautogen>=0.2.0",
    "pyside6>=6.10.1",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-qt>=4.5.0",
]

# --- Setuptools explicit package discovery configuration ---
[tool.setuptools.packages]
# Explicitly tell setuptools to find packages starting from the current directory,
# but exclude the 'tests' directory to prevent accidental bundling.
find = {where = ["."], exclude = ["tests*"]}

# --- Pytest Configuration ---
[tool.pytest.ini_options]
# Specify the directory where tests are located
testpaths = [
    "tests",
]
# Specify patterns for test files and functions
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
